# HIA-Net

./: .gitignore  CLAUDE.md  PROJECT_GUIDE.md  pyproject.toml  requirements.txt  train.py  train_franch.py
data_prepare/: load_data.py  prototypical_batch_sampler.py
dataset/SEED-China/: China_information.xlsx
dataset/SEED-China/02-EEG-DE-feature/: reading_eeg_feature.py
dataset/SEED-China/02-EEG-DE-feature/eeg_used_4s/: 10_1.npz  10_2.npz  10_3.npz  11_1.npz  11_2.npz  11_3.npz  12_1.npz  12_2.npz  12_3.npz  13_1.npz  13_2.npz  13_3.npz  14_1.npz  14_2.npz  14_3.npz  1_1.npz  1_2.npz  1_3.npz  2_1.npz  2_2.npz  2_3.npz  3_1.npz  3_2.npz  3_3.npz  4_1.npz  4_2.npz  4_3.npz  5_1.npz  5_2.npz  5_3.npz  8_1.npz  8_2.npz  8_3.npz  9_1.npz  9_2.npz  9_3.npz
dataset/SEED-China/04-Eye-tracking-feature/: reading_eye_feature.py
dataset/SEED-China/04-Eye-tracking-feature/eye_tracking_feature/: 10_1  10_2  10_3  11_1  11_2  11_3  12_1  12_2  12_3  13_1  13_2  13_3  14_1  14_2  14_3  1_1  1_2  1_3  2_1  2_2  2_3  3_1  3_2  3_3  4_1  4_2  4_3  5_1  5_2  5_3  8_1  8_2  8_3  9_1  9_2  (+1 more)
dataset/SEED-China/CrossCultureCode-main/: dnn_eeg_chinese_baseline.py  seed_chn.py  seed_chn_dataloader.py  svm_knn_lr_classifiers.py  utils.py
dataset/SEED-Franch/: French_information .xlsx
dataset/SEED-Franch/EEG-DE-features/: reading_eeg_feature.py
dataset/SEED-Franch/Eye-tracking-features/: reading_eye_feature.py
network/: Cross_Att.py  ETnet.py  model.py  proto_att.py  rescnn.py
parse/: parser_camp.py
utils/: early_stop.py  gdd.py  label_smooth.py  prototypical_loss.py  utils.py
(+61 files in other folders)
